# apis-benchmark

./: README.org  benchmark.sh  docker-compose.yml
go/: .gitignore  Dockerfile  config-docker.toml  config.toml  go.mod  go.sum  main.go
go/config/: config.go
go/database/: connection.go
infrastructure/: .gitignore  client_setup.sh  dump.sql  main.tf  outputs.tf  server_setup.sh  variables.tf
node/: .gitignore  Dockerfile  package.json  tsconfig.json
node/src/: index.ts
python_async/: pyproject.toml
python_async/api/: app.py  config.py  database.py
python_sync/: Dockerfile  pyproject.toml
python_sync/api/: __init__.py  app.py  config.py  database.py  entities.py  models.py
results/go-api/cache/: 1.json  10.json  100.json  50.json
results/go-api/db/: 1.json  10.json  100.json  50.json
results/go/cache/: 1.json  10.json  100.json  50.json
results/go/db/: 1.json  10.json  100.json  50.json
results/node-api/cache/: 1.json  10.json  100.json  50.json
results/node-api/db/: 1.json  10.json  100.json  50.json
results/node/cache/: 1.json  10.json  100.json  50.json
results/node/db/: 1.json  10.json  100.json  50.json
results/python-async-api/cache/: 1.json  10.json  100.json  50.json
results/python-async-api/db/: 1.json  10.json  100.json  50.json
results/python-async/cache/: 1.json  10.json  100.json  50.json
results/python-async/db/: 1.json  10.json  100.json  50.json
results/python-sync-api/cache/: 1.json  10.json  100.json  50.json
results/python-sync-api/db/: 1.json  10.json  100.json  50.json
results/python-sync/cache/: 1.json  (+3 more)
(+110 files in other folders)
